--- a/ConsoleClient/App.config
+++ b/ConsoleClient/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="DB" connectionString="Data Source=localhost;Initial Catalog=NingDaSjy;User ID=sa;Password=sasa"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="url" value="http://115.238.132.41:8091/WebService.asmx"/>
+    <add key="name" value ="宁波大学科技服务大楼"/>
+    <add key ="code" value="c6fa5dc7-89b9-4835-ab03-352ddbb40e3a"/>
+    <add key="mainInterval" value="30000"/>
+  </appSettings>
 </configuration>
