--- a/Reportman/Reportman.csproj
+++ b/Reportman/Reportman.csproj
@@ -65,11 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Logic.cs" />
     <Compile Include="Models\Results.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requester.cs" />
     <Compile Include="Utils\DataHelper.cs" />
+    <Compile Include="Utils\DBHelper.cs" />
     <Compile Include="Utils\EncryptHelper.cs" />
     <Compile Include="Utils\Log.cs" />
   </ItemGroup>
